# LEARNY-V2

./: LICENSE  Makefile  README.md  pyproject.toml
ankipp/: __init__.py
ankipp/anki_cli/: __init__.py  cli.py
ankipp/anki_core/: __init__.py  database.py  scheduler.py
ankipp/anki_core/io/: exporter.py  importer.py
ankipp/anki_core/models/: __init__.py  card.py  deck.py  enums.py  note.py  review_log.py
ankipp/anki_core/services/: __init__.py  card_service.py  deck_service.py  review_service.py
ankipp/anki_core/storage/: __init__.py  in_memory.py  repository.py
ankipp/anki_core/undo/: __init__.py  command.py  command_manager.py  commands.py
ankipp/anki_plugins/: __init__.py  loader.py
ankipp/anki_ui/: __init__.py
ankipp/anki_ui/controllers/: __init__.py  deck_controller.py  review_controller.py
ankipp/anki_ui/views/: __init__.py  main_window.py  review_view.py
ankipp/anki_utils/: __init__.py  config.py  logger.py
docs/: fsrs_math.md
sqlmodel/: __init__.py
tests/: test_import_export.py  test_imports.py  test_review_service.py  test_scheduler.py  test_undo_redo.py
typer/: __init__.py
